manifests/Ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "alb"          # use "nginx" if using nginx ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: nginx.vijay.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
